# dl_morphometrics_biases

./: .gitignore  .pre-commit-config.yaml  README.md  exploration-recon-any-swarm.ipynb  figures.ipynb  fsstats_extraction.py  nb_params_setup.py  process_freesurfer_recon-any.ipynb  pyproject.toml  run_freesurfer.ipynb
dl_morphometrics_helpers/: __init__.py  constants.py  data_processing.py  dlm_utils.py
docs/: synthsr-seeding.md
notebooks/: check_numbers.ipynb  exploration-recon-any-swarm.ipynb  figures.ipynb  process_freesurfer_recon-any.ipynb  run_freesurfer.ipynb  run_freesurfer8-recon-all.ipynb
scripts/: comparison_script.sh  fsstats_extraction.py
