[project]
name = "john-temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyterlab>=4.3.5",
    "matplotlib",
    "nbdev>=2.3.35",
    "nibabel>=5.3.2",
    "nilearn>=0.11.1",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "templateflow>=24.2.2",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
firefox = ">=137.0.2,<138"

#[tool.pixi.pypi-dependencies]
#john-temp = { path = ".", editable = true }

#[tool.pixi.tasks]

# ? here?s the new bit for setuptools ?

[tool.setuptools.packages.find]
# tell setuptools ?please ignore these dirs?
exclude = [
    "data",
    "swarm",
    "freebrowse"
]

