[project]
name = "dl_morphometrics_biases"
version = "0.1.0"
description = "Deep learning morphometrics bias analysis tools and utilities"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "John Lee", email = "johnleenimh@gmail.com"},
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "jupyterlab>=4.4.6",
    "pre-commit>=4.3.0",
]

[project.optional-dependencies]
analysis = [
    "jupyterlab>=4.3.5",
    "matplotlib>=3.7.0",
    "nibabel>=5.3.2",
    "nilearn>=0.11.1",
    "openpyxl>=3.1.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "templateflow>=24.2.2",
]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.7.0",
    "nbstripout>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dl_morphometrics_helpers*"]
exclude = [
    "notebooks*",
    "scripts*",
    "output*",
    "data*",
    "swarm*",
    "freebrowse*"
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "nbstripout>=0.8.1",
]
